<resources>
    <string name="app_name">MusicLoud</string>
    <string name="str_replay_msg">Music is playing, whether to play from the beginning ?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_txt">Login</string>
    <string name="register_btn">Register</string>
    <string name="register_txt">Register</string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="password_txt">Password</string>
    <string name="register_btn_txt">Register</string>
    <string name="title_activity_login">MusicLoud</string>
    <string name="title_activity_register">MusicLoud</string>
    <string name="Library">Library</string>
    <string name="Songs">Songs</string>
    <string name="Title">Title</string>
    <string name="Artist">Artist</string>
    <string name="Playlists">Playlists</string>
    <string name="RecommendedSongs">Recommended Songs</string>

    <string name="warning">Warning</string>
    <string name="fatalError">Fatal error</string>

    <string name="song1">Don\'t Cry</string>
    <string name="artist1">Guns N\' Roses</string>
    <string name="album1">na</string>

    <string name="song2">Faded</string>
    <string name="artist2">Alan Walker</string>
    <string name="album2">na</string>

    <string name="song3">So Far Away</string>
    <string name="artist3">Martin Garrix, David Guetta, Jamie Scott and Romy Dya</string>
    <string name="album3">na</string>

    <string name="song4">That Girl</string>
    <string name="artist4">Olly Murs</string>
    <string name="album4">na</string>

    <string name="song5">Normal No More(Explicit)</string>
    <string name="artist5">Tysm</string>
    <string name="album5">na</string>
    <string name="LikedSongs">Liked Songs</string>
    <string name="todo">TODO</string>
    <string name="str_auto_search_hint">Please enter the name of the song</string>
</resources>
